--- a/appspec.yml
+++ b/appspec.yml
@@ -2,4 +2,4 @@ version: 0.0
 os: linux
 files:
   - source: /index.html
-    destination: /usr/share/nginx/html/
+    destination: /usr/share/nginx/html/app1/
